update .env.example: add social media URLs for LinkedIn, Instagram, Facebook, and YouTube

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_LINKEDIN_URL=
-NEXT_PUBLIC_INSTAGRAM_URL=
-NEXT_PUBLIC_FACEBOOK_URL=
-NEXT_PUBLIC_YOUTUBE_URL=
+NEXT_PUBLIC_LINKEDIN_URL=https://www.linkedin.com/company/liadtech
+NEXT_PUBLIC_INSTAGRAM_URL=https://www.instagram.com/liadtech_?igsh=azljaDNzb3F6YWk3
+NEXT_PUBLIC_FACEBOOK_URL=https://www.facebook.com/share/18z8CL7a2Q/
+NEXT_PUBLIC_YOUTUBE_URL=https://www.youtube.com/@LIADTechOfficial
